syntax = "proto2"; 
package org.acme.travels.approvals; 
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "Approvals";
option kogito_id = "approvals";

/* @Indexed */ 
message Address { 
	option java_package = "org.acme.travels.approvals";
	/* @Field(store = Store.YES) @SortableField */ 
	optional string city = 1; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string country = 2; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string street = 3; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string zipCode = 4; 
}
/* @Indexed */ 
message Approvals { 
	option java_package = "org.acme.travels.approvals";
	/* @Field(store = Store.YES) @SortableField
 @VariableInfo(tags="") */ 
	optional string approver = 1; 
	/* @Field(store = Store.YES) @SortableField
 @VariableInfo(tags="") */ 
	optional bool firstLineApproval = 2; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string id = 3; 
	/* @Field(store = Store.YES) @SortableField
 @VariableInfo(tags="") */ 
	optional bool secondLineApproval = 4; 
	/* @Field(store = Store.YES) @SortableField
 @VariableInfo(tags="") */ 
	optional Traveller traveller = 5; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional org.kie.kogito.index.model.KogitoMetadata metadata = 6; 
}
/* @Indexed */ 
message Traveller { 
	option java_package = "org.acme.travels.approvals";
	/* @Field(store = Store.YES) @SortableField */ 
	optional Address address = 1; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string email = 2; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string firstName = 3; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string lastName = 4; 
	/* @Field(store = Store.YES) @SortableField */ 
	optional string nationality = 5; 
}
